--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-
+/* header */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -40,7 +40,7 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/* website body */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -74,7 +74,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/* right side bar main content */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -101,7 +101,7 @@ aside section img {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* left side boxes main content */
 .optimize {
     margin-bottom: 20px;
     padding: 50px;
@@ -119,7 +119,7 @@ aside section img {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* footer */
 footer {
     padding: 30px;
     clear: both;
